# tr-sensory-panels

./: .env.example  .gitignore  langgraph.json  pyproject.toml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
docs/: databricks-sql-prd.md  databricks-sql-todo.md  embeddings-prd.md  embeddings-todo.md  vector-search-todo.md
notebooks/: create_vector_indexes.ipynb  generate_embeddings.py  sensory_panel_add_embedding_cols.ipynb  sensory_panel_responses.py  sensory_panel_responses_primary_key.ipynb  sensory_panel_summary.sql  vector_index.ipynb
scripts/: generate_embeddings.py  run_list_catalogs.py  run_list_schemas.py  run_list_tables.py
src/sensory/: __init__.py
src/sensory/embeddings/: generate_embeddings.py
src/sensory/react_agent/: __init__.py  configuration.py  graph.py  mcp_server.py  shared_services.py  tools.py
src/sensory/react_agent_2/: __init__.py  configuration.py  graph.py  prompts.py  tools.py
src/sensory/utils/: databricks.py
tests/integration/react_agent/: test_graph.py
tests/integration/utils/: test_databricks.py
tests/unit/: test_configuration.py
tests/utils/: test_databricks.py
