[project]
name = "sensory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tim Reddick", email = "tim.reddick@8451.com" }
]
requires-python = ">=3.13.2"
dependencies = [
    "databricks-sdk>=0.53.0",
    "databricks-sql-connector>=4.0.3",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0",
    "ruff>=0.11.10",
]

[project.scripts]
sensory = "sensory:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
