[project]
name = "sensory"
version = "0.1.0"
description = "Agents for Kroger Sensory Panel Data."
readme = "README.md"
authors = [
    { name = "Tim Reddick", email = "tim.reddick@8451.com" }
]
requires-python = ">=3.13.2"
dependencies = [
    "databricks-sdk>=0.53.0",
    "databricks-sql-connector[pyarrow]>=4.0.3",
    "databricks-sqlalchemy>=2.0.6",
    "ipykernel>=6.29.5",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-openai>=0.3.17",
    "langchain-tavily>=0.1.6",
    "langgraph>=0.4.5",
    "langgraph-api>=0.2.27",
    "langgraph-cli>=0.2.10",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0",
    "ruff>=0.11.10",
    "sqlalchemy>=2.0.41",
]

[project.scripts]
sensory = "sensory:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
